src/objects/ISSP_External_Reports_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for external reports</description>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Service_ID__c</fullName>
        <label>Portal Service ID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Description__c</fullName>
        <label>Report Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID__c</fullName>
        <label>Report ID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Report_Title__c</fullName>
        <label>Report Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Account_Record_Type__c</fullName>
        <label>Target Account Record Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <label>Target System</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>ISSP External Reports Config</label>
</CustomObject>